<resources>
    <string name="app_name">Task App</string>
    <string name="title_activity_task">TaskActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="task_frequency_label">Task Frequency</string>
    <string name="task_text_label">Task Text</string>
    <string name="skip_button_label">Skip</string>
    <string name="complete_button_label">Complete</string>
    <string name="delete">delete</string>
    <string name="share_schedule">Share Schedule</string>
    <string name="settings">Settings</string>
    <string name="add_a_task">Add a task</string>
    <string name="task_hint">Enter a brief description of the task</string>
    <string name="frequency_text">Frequency</string>
    <string name="frequency_hint">Enter the frequency of the task</string>
    <string name="save_button_text">Save Task</string>
    <string name="start_date_label">Start Date (mm/dd/yyyy)</string>
    <string name="duration_label">Duration</string>
    <string name="frequency_label">Repeat every</string>
    <string name="days_radio_label">Days</string>
    <string name="weeks_radio_label">Weeks</string>
    <string name="months_radio_label">Months</string>
    <string name="years_radio_label">Years</string>
    <string name="interval_label">Interval</string>
    <string name="due_date_label">Due Date:</string>
    <string name="task_status_label">Task Status</string>
    <string name="start_date_label2">Start Date:</string>
    <string name="new_group_label">New group</string>
    <string name="repeats_every_label">Repeats Every</string>
    <string name="edit_task_title">Edit Task</string>
</resources>